[project]
name = "unifai-search-benchmark"
version = "0.1.0"
description = "Benchmark for evaluating the search performance of UnifAI's service discovery functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "unifai-sdk>=0.3.1",
]
